--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
             <!-- Text Content -->
             <div class="w-full md:w-1/2 text-center md:text-left mt-8 md:mt-0 reveal active">
                 <h2 class="text-primary font-semibold tracking-wide uppercase text-sm mb-2">Xin chào, tôi là</h2>
-                <h1 class="text-4xl md:text-6xl font-bold mb-2">Huỳnh Tấn Phát</h1>
+                <!-- Đã thêm class whitespace-nowrap để giữ tên trên 1 dòng -->
+                <h1 class="text-3xl sm:text-4xl md:text-6xl font-bold mb-2 whitespace-nowrap">Huỳnh Tấn Phát</h1>
                 
                 <!-- DÒNG MSSV -->
                 <p class="text-lg md:text-xl text-gray-400 font-medium mb-4">MSSV: <span class="text-white">PK04415</span></p>
