--- a/index.html
+++ b/index.html
@@ -353,7 +353,8 @@
                         <iframe 
                             src="https://drive.google.com/file/d/1hl7Fg0drfrxSbOe7KHR2siglQrnHj1bC/preview" 
                             class="w-full h-full" 
-                            allow="autoplay"
+                            allow="autoplay; fullscreen"
+                            allowfullscreen
                             frameborder="0">
                         </iframe>
                     </div>
@@ -374,7 +375,8 @@
                         <iframe 
                             src="https://drive.google.com/file/d/1J5XMXdeW0Lt98PDN8oepEfk5W9BUPshx/preview" 
                             class="w-full h-full" 
-                            allow="autoplay"
+                            allow="autoplay; fullscreen"
+                            allowfullscreen
                             frameborder="0">
                         </iframe>
                     </div>
@@ -395,7 +397,8 @@
                         <iframe 
                             src="https://drive.google.com/file/d/19pCng136YZJVPTWPqhIDUfUd-5tZOKjc/preview" 
                             class="w-full h-full" 
-                            allow="autoplay"
+                            allow="autoplay; fullscreen"
+                            allowfullscreen
                             frameborder="0">
                         </iframe>
                     </div>
@@ -416,7 +419,8 @@
                         <iframe 
                             src="https://drive.google.com/file/d/1oPE5nCBFCGNGW01PNiIF00J_kdcpukNS/preview" 
                             class="w-full h-full" 
-                            allow="autoplay"
+                            allow="autoplay; fullscreen"
+                            allowfullscreen
                             frameborder="0">
                         </iframe>
                     </div>
